<resources>
    <string name="app_name">Todo</string>
    <!-- Button -->
    <string name="bt_text_create">CREATE</string>
    <!-- Labels -->
    <string name="label_low">Low</string>
    <string name="label_medium">Medium</string>
    <string name="label_high">High</string>
    <string name="label_task_name">Task Name</string>
    <string name="label_tag">Tag</string>
    <string name="label_search">Search by tags</string>
    <string name="label_tag_view">Tag view</string>
    <!-- Content Description -->
    <string name="cd_green_circle">Green circle</string>
    <string name="cd_yellow_circle">Yellow Circle</string>
    <string name="cd_red_circle">Red circle</string>
    <string name="cd_priority">Priority of the todo</string>
    <string name="error_no_todo">Enter todo description</string>
    <string name="error_no_tag">Enter tag</string>
    <string name="no_tasks">Oh no! Zuper box is empty, create a new Todo.</string>
</resources>