<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_priority_low"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_priority_low"
                    style="@style/style_priority_dialog_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_low"
                    app:layout_constraintEnd_toStartOf="@+id/circle_low_priority"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/circle_low_priority"
                    android:layout_width="@dimen/priority_circle_size_small"
                    android:layout_height="@dimen/priority_circle_size_small"
                    android:layout_margin="@dimen/margin_medium"
                    android:contentDescription="@string/cd_green_circle"
                    android:src="@drawable/circle_solid_priority_low"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_priority_low"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <View
            android:id="@+id/priority_divider_one"
            style="@style/style_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_priority_low" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_priority_medium"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toTopOf="@id/priority_divider_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priority_divider_one">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_priority_medium"
                    style="@style/style_priority_dialog_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_medium"
                    app:layout_constraintEnd_toStartOf="@+id/circle_medium_priority"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/circle_medium_priority"
                    android:layout_width="@dimen/priority_circle_size_small"
                    android:layout_height="@dimen/priority_circle_size_small"
                    android:layout_margin="@dimen/margin_medium"
                    android:contentDescription="@string/cd_yellow_circle"
                    android:src="@drawable/circle_solid_priority_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_priority_medium"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <View
            android:id="@+id/priority_divider_two"
            style="@style/style_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_priority_medium" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_priority_high"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:cardCornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priority_divider_two">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_priority_high"
                    style="@style/style_priority_dialog_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_high"
                    app:layout_constraintEnd_toStartOf="@+id/circle_high_priority"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/circle_high_priority"
                    android:layout_width="@dimen/priority_circle_size_small"
                    android:layout_height="@dimen/priority_circle_size_small"
                    android:layout_margin="@dimen/margin_medium"
                    android:contentDescription="@string/cd_red_circle"
                    android:src="@drawable/circle_solid_priority_high"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_priority_high"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>