<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:behavior_hideable="false"
        app:behavior_peekHeight="200dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <androidx.cardview.widget.CardView
            android:id="@+id/pull_up_marker"
            android:layout_width="0dp"
            android:layout_height="@dimen/marker_height"
            android:layout_margin="@dimen/margin_medium"
            app:cardBackgroundColor="#ABABAB"
            app:cardCornerRadius="@dimen/marker_radius"
            app:layout_constraintDimensionRatio="H,1:8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_task_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:hint="@string/label_task_name"
            app:boxStrokeColor="@color/purple_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pull_up_marker">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ted_task_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_task_tag"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:hint="@string/label_tag"
            app:boxStrokeColor="@color/purple_500"
            app:layout_constraintEnd_toStartOf="@+id/card_priority_picker"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_task_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ted_task_tag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_priority_picker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_medium"
            app:cardCornerRadius="@dimen/radius_small"
            app:layout_constraintBottom_toBottomOf="@+id/til_task_tag"
            app:layout_constraintDimensionRatio="H,1:1.5"
            app:layout_constraintEnd_toStartOf="@+id/bt_create_task"
            app:layout_constraintStart_toEndOf="@+id/til_task_tag"
            app:layout_constraintTop_toBottomOf="@+id/til_task_name">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_small">

                <ImageView
                    android:id="@+id/iv_priority"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_margin="@dimen/margin_small"
                    android:src="@drawable/circle_solid_priority_low"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_priority_menu"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/iv_priority_menu" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_priority_menu"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_arrow_drop_down"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_create_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@string/bt_text_create"
            android:textColor="@color/white"
            app:backgroundTint="@color/purple_500"
            app:layout_constraintBottom_toBottomOf="@+id/card_priority_picker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_priority_picker"
            app:layout_constraintTop_toTopOf="@+id/card_priority_picker" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>